using UnityEngine;
using System.Collections.Generic;
using System.Collections;

public class PlayerCombat : MonoBehaviour
{
    // --- Ã–ZEL YETENEK YAPISI ---
    [System.Serializable]
    public struct SpecialAttack
    {
        public string attackName;      
        public KeyCode inputKey;       
        public string triggerName;     
        [Tooltip("Bu yetenek kaÃ§ saniye sÃ¼rÃ¼yor? (Kilitlenme sÃ¼resi)")]
        public float duration;         
    }

    #region Variables

    [Header("Health System")]
    public int maxHealth = 100;
    public int currentHealth;
    public bool isDead = false;

    [Header("Parry System (SavuÅŸturma)")]
    [Tooltip("Parry penceresi kaÃ§ saniye aÃ§Ä±k kalsÄ±n? (Ã–rn: 0.5sn)")]
    public float parryWindowDuration = 0.5f;
    [Tooltip("Parry tekrar dolum sÃ¼resi")]
    public float parryCooldown = 1.0f;
    public bool isParrying = false; // DÃ¼ÅŸman buna bakÄ±p hasar veremeyecek

    [Header("Effects (Hasar Alma)")]
    public ParticleSystem bloodEffect; // Kan efekti
    public Transform cameraTransform;  // Titreme iÃ§in kamera
    public float shakeDuration = 0.2f;
    public float shakeMagnitude = 0.1f;

    [Header("Basic Attack")]
    public bool canBasicAttack = true;
    public float basicAttackBlockDuration = 0.7f;

    [Header("Special Attacks List")]
    public List<SpecialAttack> specialAttacks;

    // --- KONTROL DEÄÄ°ÅKENLERÄ° ---
    private bool isBusy = false;
    private float lastBasicAttackTime = -999f;
    private float lastParryTime = -999f;
    private Vector3 originalCameraPos;

    // Referanslar
    private Animator _animator;
    private AudioSource _audioSource;

    #endregion

    #region Unity Methods

    private void Awake()
    {
        _animator = GetComponent<Animator>();
        _audioSource = GetComponent<AudioSource>();
        
        currentHealth = maxHealth;

        // Kamera boÅŸsa otomatik bul
        if (cameraTransform == null && Camera.main != null)
            cameraTransform = Camera.main.transform;
    }

    private void Update()
    {
        if (isDead) return;
        if (isBusy) return;

        // 1. PARRY KONTROLÃœ (SaÄŸ TÄ±k - En Ã¶ncelikli)
        if (Input.GetMouseButtonDown(1) && Time.time >= lastParryTime + parryCooldown)
        {
            PerformParry();
            return; // Parry yaptÄ±ysak saldÄ±rÄ± yapma
        }

        // 2. SaldÄ±rÄ± sonrasÄ± bekleme sÃ¼resi (Animation Lock)
        if (Time.time < lastBasicAttackTime + basicAttackBlockDuration) return;

        // 3. Temel SaldÄ±rÄ± (Sol TÄ±k)
        if (canBasicAttack && Input.GetMouseButtonDown(0))
        {
            PerformBasicAttack();
        }

        // 4. Ã–zel SaldÄ±rÄ±lar (Listedeki TuÅŸlar)
        CheckSpecialAttacks();
    }

    #endregion

    #region Combat Logic

    // --- PARRY MEKANÄ°ÄÄ° ---
    private void PerformParry()
    {
        _animator.SetTrigger("Parry");
        lastParryTime = Time.time;
        StartCoroutine(ParryRoutine());
    }

    private IEnumerator ParryRoutine()
    {
        isBusy = true;      // BaÅŸka tuÅŸa basmayÄ± engelle
        isParrying = true;  // Ã–lÃ¼msÃ¼zlÃ¼k penceresini aÃ§
        
        // Debug.Log("ğŸ›¡ï¸ Parry AÃ§Ä±ldÄ±!");

        yield return new WaitForSeconds(parryWindowDuration);
        
        isParrying = false; // Ã–lÃ¼msÃ¼zlÃ¼k bitti
        isBusy = false;     // Hareket serbest
        
        // Debug.Log("âŒ Parry Bitti");
    }

    // --- HASAR ALMA (Enemy bu fonksiyonu Ã§aÄŸÄ±racak) ---
    public void TakeDamage(int damage)
    {
        if (isDead) return;

        // KRÄ°TÄ°K NOKTA: EÄŸer Parry yapÄ±yorsak hasarÄ± engelle!
        if (isParrying)
        {
            Debug.Log("âœ¨ PARRY BAÅARILI! Hasar engellendi.");
            // Buraya "KÄ±lÄ±Ã§ Ã§Ä±nlama sesi" ekleyebilirsin
            return; 
        }

        // Parry yapmÄ±yorsak hasarÄ± ye
        currentHealth -= damage;
        _animator.SetTrigger("Hit"); // Hasar animasyonu

        // Efektler
        if (bloodEffect != null) bloodEffect.Play();
        if (cameraTransform != null) StartCoroutine(ShakeCamera());

        Debug.Log("ğŸ©¸ Hasar alÄ±ndÄ±! Can: " + currentHealth);

        if (currentHealth <= 0)
        {
            Die();
        }
    }

    private void Die()
    {
        isDead = true;
        _animator.SetTrigger("Die");
        Debug.Log("ğŸ’€ Oyuncu Ã–ldÃ¼.");
        // Buraya "Game Over" ekranÄ± kodu gelebilir
    }

    #endregion

    #region Attack Helper Methods

    private void PerformBasicAttack()
    {
        _animator.SetTrigger("Attack");
        lastBasicAttackTime = Time.time;
    }

    private void CheckSpecialAttacks()
    {
        foreach (var skill in specialAttacks)
        {
            if (Input.GetKeyDown(skill.inputKey))
            {
                _animator.SetTrigger(skill.triggerName);
                StartCoroutine(BusyRoutine(skill.duration));
                break;
            }
        }
    }

    private IEnumerator BusyRoutine(float time)
    {
        isBusy = true;
        yield return new WaitForSeconds(time); 
        isBusy = false;
    }

    // Ekran Titretme
    private IEnumerator ShakeCamera()
    {
        originalCameraPos = cameraTransform.localPosition;
        float elapsed = 0.0f;

        while (elapsed < shakeDuration)
        {
            float x = Random.Range(-1f, 1f) * shakeMagnitude;
            float y = Random.Range(-1f, 1f) * shakeMagnitude;

            cameraTransform.localPosition = new Vector3(originalCameraPos.x + x, originalCameraPos.y + y, originalCameraPos.z);

            elapsed += Time.deltaTime;
            yield return null;
        }

        cameraTransform.localPosition = originalCameraPos;
    }

    #endregion
}